Good functionality, still a few bugs and design to be done
For some reason, there is a strange behavior when i comment or uncomment the line 75 in the index file. The alert when triggered makes the page go through the whole newgame process after just one click of the "nouvelle partie" btn, but if it is not run, we have to click twice to start the new game.

--- a/css/style.css
+++ b/css/style.css
@@ -63,9 +63,9 @@
 #txtChances legend
 {
 
-	top: -35px;
+	top: -15px;
 	left: -50px;
-	position: absolute;
+	position: relative;
 
 }
 
@@ -90,7 +90,8 @@
 	position: absolute;
 	top: 150px;
 	display: table-cell;
-	letter-spacing: 2px;
+	letter-spacing: 7px;
+	padding: 5px;
 }
 
 .thisLetter
@@ -98,7 +99,8 @@
 
 	top: 150px;
 	display: table-cell;
-	letter-spacing: 5px;
+	letter-spacing: 7px;
+	padding: 4px;
 }
 
 #message
@@ -114,16 +116,19 @@
 
 #message legend
 {
-	position: relative;
+	position: absolute;
 		left: -325px;
 }
 
 body
 { 
+  background-color: #f2f2f2;
+  font-family: Arial, sans-serif;
     -moz-background-size: cover;
     -webkit-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     background: no-repeat;
-	background-position: 100 115;
+	background-position: 150px 250px;
+	
 } 
